# template_sample

./: CMakeLists.txt  dispatcher_policies.hpp  double_functor_dispatcher.hpp  factory.h  main.cpp  publisher_policies.hpp  typecast_combina_policies.hpp
